# Mask-to-MRI

./: .gitignore  README.md  config.yaml  main.py  mask_to_mri.ipynb  mask_to_mri_cpu.ipynb  med_ddpm_training.ipynb  prepare_splits.py  pyproject.toml  requirements.txt  test_albumentations.py  test_balanced_channels.py  test_channels.py  test_data_check.py  test_mask_check.py  test_mask_check2.py
.ipynb_checkpoints/: mask_to_mri_cpu-checkpoint.ipynb
docs/: experiment_B_implementation.md  med_ddpm_v3_1_report.md  med_ddpm_v3_report.md  project_explanation.md  project_history.md
notebooks/: demo_mask_to_synthetic.ipynb  experiment_B_train_colab.ipynb  experiment_CD_train_colab.ipynb  experiment_DE_train_colab.ipynb  experiment_F_train_colab.ipynb  fix_paths.py  fix_synthetic.py  generate_synthetic_improved.ipynb  generate_synthetic_improved_kaggle.ipynb  generate_synthetic_v3_90.ipynb  med_ddpm_v2_train.ipynb  med_ddpm_v2_train_kaggle.ipynb  med_ddpm_v3_1_train_colab.ipynb  med_ddpm_v3_train_colab.ipynb  preprocessing.ipynb
src/: __init__.py  dataset.py  discriminator.py  evaluate.py  losses.py  train.py  utils.py
src/experiment_B/: __init__.py  config.py  dataset.py  evaluate.py  experiment.py  losses.py  metrics.py  model.py  train.py  utils.py
src/med_ddpm/: __init__.py  dataset.py  diffusion.py  sample.py  train.py  unet.py
src/med_ddpm_v2/: __init__.py  config.py  model.py  sample.py  train.py
src/med_ddpm_v3/: __init__.py  config.py  model.py  sample.py  train.py  utils.py
src/med_ddpm_v3_1/: __init__.py  config.py  model.py  train.py  utils.py
(+8 files in other folders)
